--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p class="items">Lettuce</p>
       </div>
     </div>
-    <div class="burger">
+    <div class="C:\pothitla49\img\Burger">
       <img src="C:\Users\Admin\Desktop\Pro Brrgrr\img\Burger\Top@2x.png" alt="" />
       <img id="patty" src="C:\Users\Admin\Desktop\Pro Brrgrr\img\Burger\Patty.svg" alt="" />
       <img id="cheese" src="C:\Users\Admin\Desktop\Pro Brrgrr\img\Burger\Cheese@2x.png" alt="" />
