--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
         <p class="items">Lettuce</p>
       </div>
     </div>
-    <div class="C:\pothitla49\img\Burger">
-      <img src="C:\Users\Admin\Desktop\Pro Brrgrr\img\Burger\Top@2x.png" alt="" />
-      <img id="patty" src="C:\Users\Admin\Desktop\Pro Brrgrr\img\Burger\Patty.svg" alt="" />
-      <img id="cheese" src="C:\Users\Admin\Desktop\Pro Brrgrr\img\Burger\Cheese@2x.png" alt="" />
-      <img id="tomato" src="C:\Users\Admin\Desktop\Pro Brrgrr\img\Burger\Tomato@2x.png" alt="" />
-      <img id="onion" src="C:\Users\Admin\Desktop\Pro Brrgrr\img\Burger\Onion@2x.png" alt="" />
-      <img id="lettuce" src="C:\Users\Admin\Desktop\Pro Brrgrr\img\Burger\Lettuce@2x.png" alt="" />
-      <img src="C:\Users\Admin\Desktop\Pro Brrgrr\img\Burger\Bun 1@2x.png" alt="" />
+    <div class="Burger">
+      <img src="C:\pothitla49\img\Burger\Patty@2x.png" alt="" />
+      <img id="patty" src="C:\pothitla49\img\Burger\Patty.svg" alt="" />
+      <img id="cheese" src="C:\pothitla49\img\Burger\Cheese@2x.png" alt="" />
+      <img id="tomato" src="C:\pothitla49\img\Burger\Tomato@2x.png" alt="" />
+      <img id="onion" src="C:\pothitla49\img\Burger\Onion@2x.png" alt="" />
+      <img id="lettuce" src="C:\pothitla49\img\Burger\Lettuce@2x.png" alt="" />
+      <img src="C:\pothitla49\img\Burger\Bun 1@2x.png" alt="" />
     </div>
   </section>
   <footer class="footer">
