--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="C:\pothitla49\style.css" />
+  <link rel="stylesheet" href="style.css" />
   <title>BRRRGRRR</title>
 </head>
 
@@ -28,8 +28,8 @@
         <p class="items">Lettuce</p>
       </div>
     </div>
-    <div class="Burger">
-      <img src="C:\pothitla49\img\Burger\Patty@2x.png" alt="" />
+    <div class="burger">
+      <img src="C:\pothitla49\img\Burger\Top@2x.png" alt="" />
       <img id="patty" src="C:\pothitla49\img\Burger\Patty.svg" alt="" />
       <img id="cheese" src="C:\pothitla49\img\Burger\Cheese@2x.png" alt="" />
       <img id="tomato" src="C:\pothitla49\img\Burger\Tomato@2x.png" alt="" />
