--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
   </section>
   <footer class="footer">
-    <img src="C:\pothitla49\img\group-3.svg" />
+    <img src="C:\pothitla49\img\group-3.svg" class="Group-3" />
     <div class="Rectangle2">
       <div class="container-text">Choose what goes into your burger</div>
       <div class="button-container">
